--- a/template.html
+++ b/template.html
@@ -27,7 +27,7 @@
 <div id="currentWeatherInfo" class="content">
 	<p>
 	<h2>Weather in {{city}}, {{countryCode}}</h2><br />
-	<label> Date:</label><span>{{timestamp}}</span><br />
+	<label> Date:</label><span>{{timestampx}}</span><br />
 	<label> Weather:</label><span> {{weatherGroup}}</span><br />
 	<label> Tempreture:</label><span> {{temperature}} ˚C</span><br />
 	<label> Weather Detail:</label> <span>{{weatherDescription}}</span><br />
@@ -44,8 +44,8 @@
 
 <div id="historyWeatherInfo" class="content">
 	<p>
-	<h2>Weather in {{city}}, {{countryCode}}</h2><br />
-	<label> Date:</label><span>{{timestamp}}</span><br />
+	<h2>Weather-History in {{city}}, {{countryCode}}</h2><br />
+	<label> Date:</label><span>{{timestampx}}</span><br />
 	<label> Weather:</label><span> {{weatherGroup}}</span><br />
 	<label> Tempreture:</label><span> {{temperature}} ˚C</span><br />
 	<label> Weather Detail:</label> <span>{{weatherDescription}}</span><br />
@@ -58,6 +58,5 @@
 	<label> Geo coords:</label><span> [{{GeoLocationLongitude}}, {{GeoLocationLatitude}}]</span><br />
 	</p>
 </div>
-
 </body>
 </html>
