writing database working and check for duplicates

--- a/template.html
+++ b/template.html
@@ -42,7 +42,7 @@
 </div>
 
 
-<div id="historyWeatherInfo" class="content">
+<!--<div id="historyWeatherInfo" class="content">
 	<p>
 	<h2>Weather-History in {{city}}, {{countryCode}}</h2><br />
 	<label> Date:</label><span>{{timestampx}}</span><br />
@@ -57,6 +57,6 @@
 	<label> Sunset:</label><span> {{sunset}} pm</span><br />
 	<label> Geo coords:</label><span> [{{GeoLocationLongitude}}, {{GeoLocationLatitude}}]</span><br />
 	</p>
-</div>
+</div>-->
 </body>
 </html>
