--- a/template.html
+++ b/template.html
@@ -4,59 +4,95 @@
 	<meta charset="UTF-8">
 	<title>WeatherNow</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/javascript" src="main.js"></script>
 	<link rel="stylesheet" href="main.css">
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-<h1>WeatherNow</h1>
-<h4 class="credit">by J. Goetze</h4>
+<div class="container">
+	<h1>WeatherNow</h1>
+	<h4 class="credit">by J. Goetze</h4>
+</div>
 
 <div id="selectionDiv" class="content">
-	<form id="searchSelection" name="searchSelection" action="index.php" method="post">
-		<label for="citySelection">City: </label>
-		<input type="text" name="city" id="citySelection" placeholder="Name of the city" required /><br />
-		<label for="countryIdSelection">Country ID: </label>
-		<input type="text" name="country_id" id="countryIdSelection" placeholder="Country ID" required /><br />
-		<label for="isocodeShow" id="isocodeShowLabel">Press me for Country ID:</label>
-		<input type="checkbox" name="isocodeShow" id="isocodeShow" hidden>
-		<input type="Submit" value="Submit" class="button" />
-		<iframe id="isocodeList" src="https://goes.gsfc.nasa.gov/text/web_country_codes.html"></iframe>
-	</form>
+	<div class="container">
+		<form id="searchSelection" name="searchSelection" action="index.php" method="post">
+			<label for="citySelection">City: </label>
+			<input type="text" name="city" id="citySelection" placeholder="Name of the city" required /><br />
+			<label for="countryIdSelection">Country ID: </label>
+			<input type="text" name="country_id" id="countryIdSelection" placeholder="Country ID" required /><br />
+			<label for="isocodeShow" id="isocodeShowLabel">Press me for Country ID:</label>
+			<input type="checkbox" name="isocodeShow" id="isocodeShow" hidden>
+			<input type="Submit" value="Submit" class="button" />
+			<iframe id="isocodeList" src="https://goes.gsfc.nasa.gov/text/web_country_codes.html"></iframe>
+		</form>
+	</div>
 </div>
 
 <div id="currentWeatherInfo" class="content">
-	<p>
-	<h2>Weather in {{city}}, {{countryCode}}</h2><br />
-	<label> Date:</label><span>{{timestampx}}</span><br />
-	<label> Weather:</label><span> {{weatherGroup}}</span><br />
-	<label> Tempreture:</label><span> {{temperature}} ˚C</span><br />
-	<label> Weather Detail:</label> <span>{{weatherDescription}}</span><br />
-	<label> Wind:</label><span> Light breeze, {{windSpeed}} m/s, {{windDirection}} ( {{windDirectionDeg}} )</span><br />
-	<label> Cloudiness:</label><span> {{cloudiness}} %</span><br />
-	<label> Pressure:</label><span> 1019 hpa</span><br />
-	<label> Humidity:</label><span> {{humidity}} %</span><br />
-	<label> Sunrise:</label><span> {{sunrise}} am</span><br />
-	<label> Sunset:</label><span> {{sunset}} pm</span><br />
-	<label> Geo coords:</label><span> [{{GeoLocationLongitude}}, {{GeoLocationLatitude}}]</span><br />
-	</p>
+	<div class="container">
+		<p>
+		<h2>Weather in {{city}}, {{countryCode}}</h2><br />
+		<label> Date:</label><span>{{timestampx}}</span><br />
+		<label> Weather:</label><span> {{weatherGroup}}</span><br />
+		<label> Tempreture:</label><span> {{temperature}} ˚C</span><br />
+		<label> Weather Detail:</label> <span>{{weatherDescription}}</span><br />
+		<label> Wind:</label><span> {{windScale}}, {{windSpeed}} m/s, {{windDirection}} ( {{windDirectionDeg}} )</span><br />
+		<label> Cloudiness:</label><span> {{cloudiness}} %</span><br />
+		<label> Pressure:</label><span> {{pressure}} hpa</span><br />
+		<label> Humidity:</label><span> {{humidity}} %</span><br />
+		<label> Sunrise:</label><span> {{sunrise}} am</span><br />
+		<label> Sunset:</label><span> {{sunset}} pm</span><br />
+		<label> Geo coords:</label><span> [{{GeoLocationLongitude}}, {{GeoLocationLatitude}}]</span><br />
+		</p>
+	</div>
 </div>
 
 
-<!--<div id="historyWeatherInfo" class="content">
-	<p>
-	<h2>Weather-History in {{city}}, {{countryCode}}</h2><br />
-	<label> Date:</label><span>{{timestampx}}</span><br />
-	<label> Weather:</label><span> {{weatherGroup}}</span><br />
-	<label> Tempreture:</label><span> {{temperature}} ˚C</span><br />
-	<label> Weather Detail:</label> <span>{{weatherDescription}}</span><br />
-	<label> Wind:</label><span> Light breeze, {{windSpeed}} m/s, {{windDirection}} ( {{windDirectionDeg}} )</span><br />
-	<label> Cloudiness:</label><span> {{cloudiness}} %</span><br />
-	<label> Pressure:</label><span> 1019 hpa</span><br />
-	<label> Humidity:</label><span> {{humidity}} %</span><br />
-	<label> Sunrise:</label><span> {{sunrise}} am</span><br />
-	<label> Sunset:</label><span> {{sunset}} pm</span><br />
-	<label> Geo coords:</label><span> [{{GeoLocationLongitude}}, {{GeoLocationLatitude}}]</span><br />
-	</p>
-</div>-->
+<div id="history">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-1 text-center small">
+				<strong>Timestamp</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Weather <br> Group</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Temperature <br> in ˚C</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Weather <br> Description</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Wind <br> Scale</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Wind <br> Speed</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Wind <br> Direction</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Cloudiness <br> in %</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Pressure <br> in hpa</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Humidity <br> in %</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Sunrise <br> am</strong>
+			</div>
+			<div class="col-xs-1 text-center small">
+				<strong>Sunset <br> pm</strong>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
+<script type="text/javascript" src="main.js"></script>
 </html>
